add simple typing

--- a/projectshop/mypy.ini
+++ b/projectshop/mypy.ini
@@ -1,6 +1,7 @@
 
 [mypy]
 python_version = 3.6
+plugins = mypy_django_plugin.main
 check_untyped_defs = True
 ignore_errors = False
 ignore_missing_imports = True
@@ -11,3 +12,9 @@ warn_return_any = True
 
 [mypy-*.migrations.*]
 ignore_errors = True
+
+[mypy-*.tests.*]
+ignore_errors = True
+
+[mypy.plugins.django-stubs]
+django_settings_module  =  projectshop.settings
